[workspace]
members = ["jupiter-swap-api-client", "example"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80.0"

[workspace.dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
reqwest = { version = "0.12.12", features = ["json"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.13.0"
solana-account-decoder = "~2.2.1"
solana-client = "~2.2.1"
solana-sdk = "~2.2.1"
thiserror = "2.0.12"
