[package]
description = "Jupiter Swap API rust client"
edition = { workspace = true }
name = "jupiter-swap-api-client"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
solana-account-decoder = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
